# docugenius-ai

./: .env.example  README.md  docker-compose.example.yml
backend/: Dockerfile.development  Dockerfile.production  main.py  pyproject.toml  requirements.txt
backend/application/: prompts.py
backend/application/ai_gateway/: ai_gateway.py
backend/application/dtos/: ai_inference.py  api_response.py  auth_dtos.py  document_field.py  document_field_suggestion.py  document_generation.py  document_type.py  document_type_suggestion.py  enum_dtos.py  pagination_params.py  user.py
backend/application/email/: email.py
backend/application/file_storage/: file_storage.py
backend/application/repositories/: document_field_repository.py  document_type_repository.py  generated_document_repository.py  user_repository.py
backend/application/use_cases/: create_document_type_use_case.py  delete_document_type_use_case.py  get_document_type_by_name_use_case.py  list_document_types_use_case.py
backend/core/enums/: field_type_enum.py  user_role_enum.py
backend/core/models/: document_field.py  document_type.py  generated_document.py  user.py
backend/core/value_objects/: hashed_password.py
backend/infrastructure/database/: mysql_config.py  mysql_dependencies.py
backend/infrastructure/email/: email_dependencies.py  smtp_email.py
backend/infrastructure/file_storage/: file_storage_dependencies.py  local_file_storage.py  s3_file_storage.py
backend/infrastructure/gateways/: ai_config.py  hf_openai_ai_gateway.py
backend/interfaces/: dependencies.py
frontend/: index.html  (+3 more)
(+70 files in other folders)
